# code_practice

./: .gitignore
basic_practice/: CMakeLists.txt  INLINE.cpp  INLINE.h  constPointer.cpp  constPointer.h  dispatch.cpp  friend.cpp  overloadFun.cpp  shared_ptr.cpp  vector.cpp
basic_practice/doc/: const.md  copy&destructConstructor.md  inline.md  markdown.md  overloadFun.md  style.md  注意事项.md
linux/: CMakeLists.txt  byteOrder.cpp  raw  raw.cpp  raw.h  send  send.cpp  union.cpp
linux/code-test/am6412-spi-userspace/: spi.cpp  spi.h
linux/code-test/interprocess/name-pipe/: name-pipe.md
linux/cpu/ti/am6412/: baseKnowledge.md
linux/doc/: BPF.md  errno.md  host_network_byte_order.md  linux_clock_time.md  memory  mmap-am6412-spi.md  mutex.md  name-pipe.md  pps.md  timerfd.md  timestamping.md
linux/doc/C/C++/: constructionFunction.md
linux/doc/compile/: 未显示声明函数编译通过.md
linux/doc/cpu/ti/am6412/: 归纳.md
linux/doc/kgdb_kdb/: kgdb_kdb.md
linux/doc/picture/: ADRESS_MODE  BPF_INSTRUCTION
linux/doc/root_file_system/: initramfs.md
linux/doc/sshkey/: sshkey&git.md
linux/doc/zhengdian/: CPU_MCIMX6Y2CVM08AB.md  compile.md
linux/doc/zmq/: 简介.md
linux/embedded/: buildroot.md
linux/embedded/doc/: buildroot.md
